--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   intl: ^0.16.1
   flutter_dotenv: ^2.1.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
